# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pylint.yml
gendiff/: __init__.py  app.py  cli.py  engine.py  loaders.py
gendiff/renders/: __init__.py  json_render.py  plain.py
gendiff/scripts/: gendiff.py
testfiles/: file1.json
tests/: input_data.py  test_all.py  test_data.py  test_gendiff.py
tests/fixtures/: file1.json  file2.json  json_res_tree  json_txt_res  plain_res  yaml1.yml  yaml2.yaml  yaml_res  yaml_tree_res_plain
